[diffusion] fix: make input/output file save paths configurable and disableable (#19580)
Co-authored-by: Mick <mickjagger19@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -248,6 +248,7 @@ lmms-eval
 **/.serena/
 ctags/
 outputs/
+inputs/
 
 # Eval Cache
 .longbench_cache/
@@ -272,6 +273,7 @@ sgl-kernel/csrc/**/*_musa/
 *.mudmp
 
 # Others
+# diffusion 3D outputs
 *.glb
 *.ply
 *.npz
